# cmake-FFmpeg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_all.py  build_all.sh  libavutil.cmake
make/: fftools.cmake  gcc_common.opt  libavcodec.cmake  libavdevice.cmake  libavfilter.cmake  libavformat.cmake  libavresample.cmake  libavutil.cmake  libpostproc.cmake  libswresample.cmake  libswscale.cmake
temp/: ff_configure.py
